Finish Project section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header aria-label="About section">
+      <header class="main_header" aria-label="About section">
         <div class="about">
           <div class="profile_image">
             <img
@@ -55,6 +55,188 @@
           </div>
         </div>
       </header>
+      <main>
+        <section class="projects">
+          <h2>My Projects</h2>
+          <div class="projects_container">
+            <article>
+              <div class="project_img">a</div>
+              <div class="project_info">
+                <header>
+                  <h3>Project One</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div class="project_img"></div>
+              <div class="project_info">
+                <header>
+                  <h3>Project two</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div class="project_img"></div>
+              <div class="project_info">
+                <header>
+                  <h3>Project Three</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div class="project_img"></div>
+              <div class="project_info">
+                <header>
+                  <h3>Project Four</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div class="project_img"></div>
+              <div class="project_info">
+                <header>
+                  <h3>Project Five</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div class="project_img"></div>
+              <div class="project_info">
+                <header>
+                  <h3>Project Six</h3>
+                  <div class="project_links">
+                    <a href="https://www.github.com/" taget="_blank">
+                      <img
+                        class="icon-sm"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="Github"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        class="icon-sm"
+                        src="asset/open_in_new.svg"
+                        alt="Preview"
+                      />
+                    </a>
+                  </div>
+                </header>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Ratione ad, laborum fugiat eius quisquam nostrum neque labore
+                  laboriosam earum quas.
+                </p>
+              </div>
+            </article>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
