--- a/index.html
+++ b/index.html
@@ -237,6 +237,29 @@
           </div>
         </section>
       </main>
+      <footer>
+        <div class="footer_info">
+          <h2 class="heading">Contact Me</h2>
+          <p>
+            Please get in touch if you think our work could be mutually
+            benificial
+          </p>
+          <ul>
+            <li>
+              <address>1234 Random Road Random Town, California 123</address>
+            </li>
+            <li>
+              <img class="icon-sm" src="./asset/telephone.svg" alt="" />
+              <p>5555-555-5555</p>
+            </li>
+            <li>
+              <img class="icon-sm" src="./asset/mail.svg" alt="" />
+              <address>randomguy@email.com</address>
+            </li>
+          </ul>
+        </div>
+        <div class="footer_img"></div>
+      </footer>
     </div>
   </body>
 </html>
